{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 11,
  "lineage": "a0c0bd68-6360-6533-0e8b-3c76755736fb",
  "resources": [
    {
      "module": "module.hashistack",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:934745300056:vpc/vpc-a89363d5",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-48a96427",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-4cdf4236",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-a89363d5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-7326590d",
            "owner_id": "934745300056"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.hashistack",
      "mode": "managed",
      "type": "aws_elb",
      "name": "server_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:934745300056:loadbalancer/3by1-mhc-mws-nomad-server-lb",
            "availability_zones": [
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "3by1-mhc-mws-nomad-server-lb-348364303.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:4646",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "3by1-mhc-mws-nomad-server-lb",
            "idle_timeout": 60,
            "instances": [
              "i-0544b7e92842c5f14",
              "i-0ad446cbde6ca4a4a",
              "i-0d459c0718e040f97"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 4646,
                "instance_protocol": "http",
                "lb_port": 4646,
                "lb_protocol": "http"
              },
              {
                "instance_port": 8200,
                "instance_protocol": "http",
                "lb_port": 8200,
                "lb_protocol": "http"
              },
              {
                "instance_port": 8500,
                "instance_protocol": "http",
                "lb_port": 8500,
                "lb_protocol": "http"
              }
            ],
            "name": "3by1-mhc-mws-nomad-server-lb",
            "security_groups": [
              "sg-0f1275f58d8b39bf7"
            ],
            "source_security_group": "934745300056/3by1-mhc-mws-nomad-server-lb",
            "source_security_group_id": "sg-0f1275f58d8b39bf7",
            "subnets": [
              "subnet-7c7edf23"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.hashistack.aws_iam_instance_profile.instance_profile",
            "module.hashistack.aws_iam_role.instance_role",
            "module.hashistack.aws_instance.server",
            "module.hashistack.aws_security_group.primary",
            "module.hashistack.aws_security_group.server_lb",
            "module.hashistack.data.aws_iam_policy_document.instance_role",
            "module.hashistack.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.hashistack",
      "mode": "managed",
      "type": "aws_instance",
      "name": "client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c55b4315f03e29bf",
            "arn": "arn:aws:ec2:us-east-1:934745300056:instance/i-0a264142f86b7f8ab",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdd",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-09e38339b4e4b10ad",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "3by1-mhc-mws-nomad20250617211913936900000002",
            "id": "i-0a264142f86b7f8ab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "support_nomad_dev-access-key-mikael",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a514f792e15972ac",
            "private_dns": "ip-172-31-37-249.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.37.249",
            "public_dns": "ec2-54-205-247-166.compute-1.amazonaws.com",
            "public_ip": "54.205.247.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b12d8080d4147b7e",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "3by1-mhc-mws-nomad"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7c7edf23",
            "tags": {
              "ConsulAutoJoin": "auto-join",
              "Name": "3by1-mhc-mws-nomad-client-0",
              "PromptID": "client-0"
            },
            "tags_all": {
              "ConsulAutoJoin": "auto-join",
              "Name": "3by1-mhc-mws-nomad-client-0",
              "PromptID": "client-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-038a6baf6a88323ee"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.hashistack.aws_iam_instance_profile.instance_profile",
            "module.hashistack.aws_iam_role.instance_role",
            "module.hashistack.aws_instance.server",
            "module.hashistack.aws_security_group.primary",
            "module.hashistack.aws_security_group.server_lb",
            "module.hashistack.data.aws_iam_policy_document.instance_role",
            "module.hashistack.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.hashistack",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c55b4315f03e29bf",
            "arn": "arn:aws:ec2:us-east-1:934745300056:instance/i-0ad446cbde6ca4a4a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "3by1-mhc-mws-nomad20250617211913936900000002",
            "id": "i-0ad446cbde6ca4a4a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "support_nomad_dev-access-key-mikael",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b5841e215f8efe13",
            "private_dns": "ip-172-31-40-154.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.40.154",
            "public_dns": "ec2-34-230-60-3.compute-1.amazonaws.com",
            "public_ip": "34.230.60.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07415068edfda844e",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "3by1-mhc-mws-nomad"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7c7edf23",
            "tags": {
              "ConsulAutoJoin": "auto-join",
              "Name": "3by1-mhc-mws-nomad-server-0",
              "PromptID": "server-0"
            },
            "tags_all": {
              "ConsulAutoJoin": "auto-join",
              "Name": "3by1-mhc-mws-nomad-server-0",
              "PromptID": "server-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-038a6baf6a88323ee"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.hashistack.aws_iam_instance_profile.instance_profile",
            "module.hashistack.aws_iam_role.instance_role",
            "module.hashistack.aws_security_group.primary",
            "module.hashistack.aws_security_group.server_lb",
            "module.hashistack.data.aws_iam_policy_document.instance_role",
            "module.hashistack.data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c55b4315f03e29bf",
            "arn": "arn:aws:ec2:us-east-1:934745300056:instance/i-0544b7e92842c5f14",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "3by1-mhc-mws-nomad20250617211913936900000002",
            "id": "i-0544b7e92842c5f14",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "support_nomad_dev-access-key-mikael",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-071c7d6849d9c3710",
            "private_dns": "ip-172-31-46-136.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.46.136",
            "public_dns": "ec2-54-83-236-183.compute-1.amazonaws.com",
            "public_ip": "54.83.236.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c31afe8ff1840986",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "3by1-mhc-mws-nomad"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7c7edf23",
            "tags": {
              "ConsulAutoJoin": "auto-join",
              "Name": "3by1-mhc-mws-nomad-server-1",
              "PromptID": "server-1"
            },
            "tags_all": {
              "ConsulAutoJoin": "auto-join",
              "Name": "3by1-mhc-mws-nomad-server-1",
              "PromptID": "server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-038a6baf6a88323ee"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.hashistack.aws_iam_instance_profile.instance_profile",
            "module.hashistack.aws_iam_role.instance_role",
            "module.hashistack.aws_security_group.primary",
            "module.hashistack.aws_security_group.server_lb",
            "module.hashistack.data.aws_iam_policy_document.instance_role",
            "module.hashistack.data.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c55b4315f03e29bf",
            "arn": "arn:aws:ec2:us-east-1:934745300056:instance/i-0d459c0718e040f97",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "3by1-mhc-mws-nomad20250617211913936900000002",
            "id": "i-0d459c0718e040f97",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "support_nomad_dev-access-key-mikael",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0691c61ce964ea2b5",
            "private_dns": "ip-172-31-45-161.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.45.161",
            "public_dns": "ec2-54-165-35-67.compute-1.amazonaws.com",
            "public_ip": "54.165.35.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01d657cceaefcf5b7",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "3by1-mhc-mws-nomad"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7c7edf23",
            "tags": {
              "ConsulAutoJoin": "auto-join",
              "Name": "3by1-mhc-mws-nomad-server-2",
              "PromptID": "server-2"
            },
            "tags_all": {
              "ConsulAutoJoin": "auto-join",
              "Name": "3by1-mhc-mws-nomad-server-2",
              "PromptID": "server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-038a6baf6a88323ee"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.hashistack.aws_iam_instance_profile.instance_profile",
            "module.hashistack.aws_iam_role.instance_role",
            "module.hashistack.aws_security_group.primary",
            "module.hashistack.aws_security_group.server_lb",
            "module.hashistack.data.aws_iam_policy_document.instance_role",
            "module.hashistack.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.hashistack",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:934745300056:security-group/sg-038a6baf6a88323ee",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038a6baf6a88323ee",
            "ingress": [
              {
                "cidr_blocks": [
                  "73.97.69.125/32"
                ],
                "description": "",
                "from_port": 18080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 18080
              },
              {
                "cidr_blocks": [
                  "73.97.69.125/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "73.97.69.125/32"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "73.97.69.125/32"
                ],
                "description": "",
                "from_port": 4646,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f1275f58d8b39bf7"
                ],
                "self": false,
                "to_port": 4646
              },
              {
                "cidr_blocks": [
                  "73.97.69.125/32"
                ],
                "description": "",
                "from_port": 50070,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50070
              },
              {
                "cidr_blocks": [
                  "73.97.69.125/32"
                ],
                "description": "",
                "from_port": 50075,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50075
              },
              {
                "cidr_blocks": [
                  "73.97.69.125/32"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "73.97.69.125/32"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "73.97.69.125/32"
                ],
                "description": "",
                "from_port": 8200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f1275f58d8b39bf7"
                ],
                "self": false,
                "to_port": 8200
              },
              {
                "cidr_blocks": [
                  "73.97.69.125/32"
                ],
                "description": "",
                "from_port": 8500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f1275f58d8b39bf7"
                ],
                "self": false,
                "to_port": 8500
              },
              {
                "cidr_blocks": [
                  "73.97.69.125/32"
                ],
                "description": "",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              },
              {
                "cidr_blocks": [
                  "73.97.69.125/32"
                ],
                "description": "",
                "from_port": 9998,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9999
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "3by1-mhc-mws-nomad",
            "name_prefix": "",
            "owner_id": "934745300056",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-a89363d5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.hashistack.aws_security_group.server_lb",
            "module.hashistack.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.hashistack",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:934745300056:security-group/sg-0f1275f58d8b39bf7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f1275f58d8b39bf7",
            "ingress": [
              {
                "cidr_blocks": [
                  "73.97.69.125/32"
                ],
                "description": "",
                "from_port": 4646,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4646
              },
              {
                "cidr_blocks": [
                  "73.97.69.125/32"
                ],
                "description": "",
                "from_port": 8200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8200
              },
              {
                "cidr_blocks": [
                  "73.97.69.125/32"
                ],
                "description": "",
                "from_port": 8500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8500
              }
            ],
            "name": "3by1-mhc-mws-nomad-server-lb",
            "name_prefix": "",
            "owner_id": "934745300056",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-a89363d5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.hashistack.data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}